# raytracer-basic

./: CMakeLists.txt
include/: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  utils.h  vec3.h
include/Vec3/: vec3.h
output/: cmd1.bat  image.ppm
src/: CMakeLists.txt  RaytracerBasic.cpp  RaytracerBasicConfig.h.in  main.cpp
